# fboo

./: .gitignore  CMakeLists.txt  build.sh  generator.sh
apps/: CMakeLists.txt  factorio.cpp  paths.h.in
include/fboo/: entity.hpp  event.hpp  game.hpp  order.hpp  util.hpp
json/: default-settings.json  factory.json  item.json  recipe.json  technology.json
json/challenges/: challenge-1.json  challenge-2.json  challenge-3.json  challenge-4.json  challenge-5.json  challenge-6.json  challenge-7.json  solution-1.json  solution-2.json
src/: CMakeLists.txt  entity.cpp  event.cpp  game.cpp  order.cpp
